Bug 616992 - Give nsDOMConstructors a precreate hook so that we don't accidentally create more than one wrapper object for them. r=jst@mozilla.com, gal@uci.edu, a=blocker